# apollo

./: .gitignore  README.md  pyproject.toml  requirements-tui.txt  requirements.txt
apollo/: __init__.py  common.py  main.py  nfo.py  tmdb.py  tui.py
apollo/statics/: apollo.tcss
